--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
 :root {
     --blue: #00004C;
     --green: #669900;
@@ -16,7 +18,60 @@ section {
     border: 2px solid white;
     
 }
-    
+
+li, a, button, h1 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #ecf0f1;
+    background: var(--blue);
+    text-decoration: none;
+
+}
+
+header {
+    display: flex;
+    background-color: var(--blue);
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
+
+}
+
+h1 {
+    cursor: pointer;
+
+}
+
+.nav_links {
+    list-style: none;
+}
+
+.nav_links li {
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.nav_links li a {
+    transition: all 0.3s ease 0s;
+}
+
+.nav_links li a:hover {
+    color: #0088a0;
+}
+
+button {
+    padding: 9px 25px;
+    background-color: rgba(0, 136, 169, 1);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;;
+}
+
+button:hover {
+    background-color: rgba(0, 136, 169, 0.8);
+}
 
 .one {
     font-size: 200%;
