--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,21 +93,24 @@ button:hover {
 /* About Me section */
 
 .aboutme-section {
-    background: #2c2c2c;
+    background-color: #2c2c2c;
+    height: 45vh;
 }
 
 .aboutme-header {
     color: white;
     font-size: 32px;
-    border: 2px solid black;
+    margin-top: 40px;
     padding-left: 150px;
     padding-right: 10px;
+    height: 400px;
     width: 100px;
     border-right: white 3px solid;
 }
 
 .aboutme-text {
     padding-left: 10px;
+    margin-top: 25px;
     font-size: 16px;
     color: white;
 }
