--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,8 +137,8 @@ button:hover {
 
 /* Work  */
 .work_section {
-    background: #2c2c2c ;
-    
+    background-color: #2c2c2c ;
+
 }
 
 .work_header {
@@ -151,6 +151,35 @@ button:hover {
     width: 100px;
     border-right: #669900 3px solid;
 }
+
+.container {
+    .container {
+        background: #000;
+        background: linear-gradient(135deg, #000 0%, #000 25%, #225eb3 50%, #ff30d2 75%, #600585 100%);
+        background-size: 400% 400%;
+        background-repeat: no-repeat;
+        display: flex;
+        width: 500px;
+        height: 500px;
+        max-width: 100vw;
+        max-height: 100vh;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        position: relative;
+        cursor: pointer;
+        transition: 0.5s all;
+    
+
+}
+
+.image_1 {
+    display: flex;
+    background-image: url(../images/toolkit.jpeg);
+    background-size: cover;
+}
+
+
 
 
 /* Contact  */
