--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,8 +137,8 @@ button:hover {
 
 /* Work  */
 .work_section {
-    background-color: #2c2c2c ;
-
+    background-color: #2c2c2c;
+    display: flex;
 }
 
 .work_header {
@@ -152,14 +152,17 @@ button:hover {
     border-right: #669900 3px solid;
 }
 
-.container {
+.big_container {
     background: #000;
     background: linear-gradient(135deg, #000 0%, #000 25%, #225eb3 50%, #ff30d2 75%, #600585 100%);
     background-size: 400% 400%;
     background-repeat: no-repeat;
     display: flex;
-    width: 500px;
-    height: 500px;
+    flex-direction: column;
+    margin-left: 10px;
+    margin-top: 40px;
+    width: 600px;
+    height: 150px;
     max-width: 100vw;
     max-height: 100vh;
     justify-content: center;
@@ -168,9 +171,41 @@ button:hover {
     position: relative;
     cursor: pointer;
     transition: 0.5s all;
+    flex-wrap: wrap;
+    flex-basis: 50%;
 }
 
-.image {
+.small_container {
+    background: #000;
+    background: linear-gradient(135deg, #000 0%, #000 25%, #225eb3 50%, #ff30d2 75%, #600585 100%);
+    background-size: 400% 400%;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    margin-top: 40px;
+    width: 600px;
+    height: 150px;
+    max-width: 100vw;
+    max-height: 100vh;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    position: relative;
+    cursor: pointer;
+    transition: 0.5s all;
+    flex-wrap: wrap;
+    flex-basis: 50%;
+}
+
+.big_container:hover {
+    background-position: 100% 100%;
+}
+
+.small_container:hover {
+    background-position: 100% 100%;
+
+.image_1 {
     position: absolute;
     left: 0;
     top: 0;
@@ -181,11 +216,61 @@ button:hover {
     height: 100%;
     opacity: 0.5;
     mix-blend-mode: screen;
+    flex-grow: 3;
 }
 
-.container:hover {
-    background-position: 100% 100%;
+.image_2 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: #000 url(../images/portfolio.jpeg) no-repeat center center;
+    background-size: cover;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    mix-blend-mode: screen;
 }
+
+.image_3 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: #000 url(../images/Rock-paper-scissor.jpeg) no-repeat center center;
+    background-size: cover;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    mix-blend-mode: screen;
+}
+
+.image_4 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: #000 url(../images/coding.jpeg) no-repeat center center;
+    background-size: cover;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    mix-blend-mode: screen;
+}
+
+.image_5 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: #000 url(../images/videogame.jpeg) no-repeat center center;
+    background-size: cover;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    mix-blend-mode: screen;
+}
+
 .text {
     position: relative;
     z-index: 10;
