Images are laid out correctly like the rubric

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,22 +147,30 @@ button:hover {
     margin-top: 40px;
     padding-left: 150px;
     padding-right: 20px;
-    height: 400px;
+    height: 820px;
     width: 100px;
     border-right: #669900 3px solid;
 }
 
+/* Image Containers! */
+
+.container_column {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .big_container {
     background: #000;
-    background: linear-gradient(135deg, #000 0%, #000 25%, #225eb3 50%, #ff30d2 75%, #600585 100%);
+    background: linear-gradient(135deg, #000 0%, #000 25%, #f8bd41 50%, #f8bd41 75%, #a2443b  100%);
     background-size: 400% 400%;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     margin-left: 10px;
     margin-top: 40px;
-    width: 600px;
-    height: 150px;
+    width: 700px;
+    height: 500px;
     max-width: 100vw;
     max-height: 100vh;
     justify-content: center;
@@ -171,21 +179,20 @@ button:hover {
     position: relative;
     cursor: pointer;
     transition: 0.5s all;
-    flex-wrap: wrap;
-    flex-basis: 50%;
+    flex-grow: 3;
 }
 
 .small_container {
     background: #000;
-    background: linear-gradient(135deg, #000 0%, #000 25%, #225eb3 50%, #ff30d2 75%, #600585 100%);
+    background: linear-gradient(135deg, #000 0%, #000 25%, #f8bd41 50%, #f8bd41 75%, #a2443b  100%);
     background-size: 400% 400%;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     margin-left: 10px;
     margin-top: 40px;
-    width: 600px;
-    height: 150px;
+    width: 300px;
+    height: 250px;
     max-width: 100vw;
     max-height: 100vh;
     justify-content: center;
@@ -198,12 +205,36 @@ button:hover {
     flex-basis: 50%;
 }
 
+/* Image Container - Hover */
 .big_container:hover {
     background-position: 100% 100%;
 }
 
 .small_container:hover {
     background-position: 100% 100%;
+
+}
+
+/* Image - Rows */
+
+.first_row {
+    flex-grow: 3;
+    display: flex;
+    flex-direction: row;
+}
+
+.second_row {
+    flex-grow: 3;
+    display: flex;
+    flex-direction: row;
+}
+
+.third_row {
+    flex-grow: 3;
+    display: flex;
+    flex-direction: row;
+}
+
 
 .image_1 {
     position: absolute;
