--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,7 @@ button:hover {
 .work_section {
     background-color: #2c2c2c;
     display: flex;
+    height: 65vh;
 }
 
 .work_header {
@@ -147,7 +148,7 @@ button:hover {
     margin-top: 40px;
     padding-left: 150px;
     padding-right: 20px;
-    height: 820px;
+    height: 680px;
     width: 100px;
     border-right: #669900 3px solid;
 }
@@ -158,6 +159,7 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 100px;
 }
 
 .big_container {
@@ -170,7 +172,7 @@ button:hover {
     margin-left: 10px;
     margin-top: 40px;
     width: 700px;
-    height: 500px;
+    height: 300px;
     max-width: 100vw;
     max-height: 100vh;
     justify-content: center;
@@ -180,6 +182,7 @@ button:hover {
     cursor: pointer;
     transition: 0.5s all;
     flex-grow: 3;
+    margin-left: 25px;
 }
 
 .small_container {
@@ -192,7 +195,7 @@ button:hover {
     margin-left: 10px;
     margin-top: 40px;
     width: 300px;
-    height: 250px;
+    height: 150px;
     max-width: 100vw;
     max-height: 100vh;
     justify-content: center;
@@ -203,6 +206,7 @@ button:hover {
     transition: 0.5s all;
     flex-wrap: wrap;
     flex-basis: 50%;
+    margin-left: 25px;
 }
 
 /* Image Container - Hover */
