--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ button:hover {
 }
 
 /* Hero Section */
-.one {
+.hero_section {
     font-size: 200%;
     color: black;
     background-color: #cccccc;
@@ -119,7 +119,7 @@ button:hover {
 
 .aboutme-section {
     background-color: #2c2c2c;
-    height: 45vh;
+    height: 59vh;
 }
 
 .aboutme-header {
@@ -137,7 +137,7 @@ button:hover {
     padding-left: 10px;
     margin-top: 25px;
     margin-right: 40px;
-    font-size: 16px;
+    font-size: 20px;
     color: white;
 }
 
