--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ button:hover {
     background-color: #cccccc;
     background-image: url(../images/space-hero.png);
     background-repeat: no-repeat;
-    height: 89vh;
+    height: 100vh;
     width: 100%;
     background-position: center;
     background-size: cover;
@@ -145,7 +145,8 @@ button:hover {
 .work_section {
     background-color: #2c2c2c;
     display: flex;
-    height: 65vh;
+    height: 90vh;
+    width: 100%;
 }
 
 .work_header {
@@ -322,7 +323,8 @@ button:hover {
 /* Contact  */
 .contact_section {
     background: #2c2c2c ;
-    height: 15vh;
+    height: 25vh;
+    width: 100%;
 }
 
 .contact_header {
