--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,8 @@ button:hover {
 
 .aboutme-section {
     background-color: #2c2c2c;
-    height: 59vh;
+    height: 650px;
+    width: 100%;
 }
 
 .aboutme-header {
@@ -145,7 +146,7 @@ button:hover {
 .work_section {
     background-color: #2c2c2c;
     display: flex;
-    height: 90vh;
+    height: 750px;
     width: 100%;
 }
 
